force-app/main/default/objects/Standard_Pay_Plan_Header__c/Standard_Pay_Plan_Header__c.object-meta.xml
<CustomObject>
    <label>Standard Pay Plan Header</label>
    <nameField>
        <label>Standard Pay Plan Header Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Standard Pay Plan Headers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>