force-app/main/default/objects/Standard_Pay_Plan_Header__c/fields/Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge__c</fullName>
    <formula>IF(NOT( ISBLANK( Charge_Code__r.Description__c ) ) , Charge_Code__r.Charge_Code1__c
+ &apos; - &apos; + Charge_Code__r.Description__c , Charge_Code__r.Charge_Code1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge</label>
    <type>Text</type>
</CustomField>