force-app/main/default/objects/Standard_Pay_Plan_Header__c/fields/Effective_from__c.field-meta.xml
<CustomField>
    <fullName>Effective_from__c</fullName>
    <label>Effective from</label>
    <type>Date</type>
</CustomField>