force-app/main/default/objects/Standard_Pay_Plan_Header__c/fields/Pay_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Pay_Plan_ID__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pay Plan ID</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>