force-app/main/default/objects/Standard_Pay_Plan_Header__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Plan</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Payment_Plan__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <filterItems>
            <field>Payment_Plan__c.Tower__c</field>
            <operation>equals</operation>
            <valueField>$Source.Tower__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Payment_Plan__c</referenceTo>
    <relationshipLabel>Standard Pay Plan Headers</relationshipLabel>
    <relationshipName>Standard_Pay_Plan_Headers</relationshipName>
    <type>Lookup</type>
</CustomField>