force-app/main/default/objects/Standard_Pay_Plan_Header__c/fields/Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Plan_Code__c</fullName>
    <label>Plan Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>