force-app/main/default/objects/Standard_Pay_Plan_Header__c/fields/Plan_Description__c.field-meta.xml
<CustomField>
    <fullName>Plan_Description__c</fullName>
    <label>Plan Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>