force-app/main/default/objects/Standard_Pay_Plan_Header__c/fields/Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Id__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Project Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>