force-app/main/default/objects/Standard_Pay_Plan_Header__c/validationRules/Effective_from_not_Less_than_Project_S_D.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_from_not_Less_than_Project_S_D</fullName>
    <active>true</active>
    <errorConditionFormula>Effective_from__c  &lt; Project__r.Start_Date__c</errorConditionFormula>
    <errorDisplayField>Effective_from__c</errorDisplayField>
    <errorMessage>Effective from cann&apos;t be less than Project Start Date</errorMessage>
</ValidationRule>